--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:image" content="favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@wenrydev" />
     <meta name="twitter:image" content="favicon.png" />
     <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
