Fix: Update Open Graph and Twitter meta tags for improved SEO and social sharing

--- a/index.html
+++ b/index.html
@@ -6,27 +6,33 @@
     <title>
       Gustavo Wenry | O Seu Desenvolvedor Web - Sites de Alta Conversão
     </title>
-    <meta
-      name="description"
-      content="Sites profissionais e estratégicos criados sob medida para empreendedores. Sites otimizados com SEO, design moderno e foco em resultados."
-    />
-    <meta name="author" content="Gustavo Wenry" />
-
-    <meta
-      property="og:title"
-      content="Gustavo Wenry | O Seu Desenvolvedor Web"
-    />
+    <!-- Open Graph / Social Media -->
+    <meta property="og:title" content="Gustavo Wenry - Desenvolvedor Web" />
     <meta
       property="og:description"
-      content="Sites profissionais que vendem todos os dias. Especialista em sites otimizados para empreendedores."
+      content="Desenvolvimento de sites profissionais e sistemas web"
+    />
+    <meta
+      property="og:image"
+      content="https://gustavo-wenry-website.vercel.app/images/og-image.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://gustavo-wenry-website.vercel.app"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="favicon.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@wenrydev" />
-    <meta name="twitter:image" content="favicon.png" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="twitter:title" content="Gustavo Wenry - Desenvolvedor Web" />
+    <meta
+      name="twitter:description"
+      content="Desenvolvimento de sites profissionais e sistemas web"
+    />
+    <meta
+      name="twitter:image"
+      content="https://gustavo-wenry-website.vercel.app/images/og-image.jpg"
+    />
   </head>
 
   <body>
