Fix: Update page title and Open Graph image to enhance SEO and social sharing

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Gustavo Wenry | O Seu Desenvolvedor Web - Sites de Alta Conversão
-    </title>
+    <title>Gustavo Wenry | Desenvolvedor Web</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
     <!-- Open Graph / Social Media -->
     <meta property="og:title" content="Gustavo Wenry - Desenvolvedor Web" />
     <meta
@@ -14,7 +16,7 @@
     />
     <meta
       property="og:image"
-      content="https://gustavo-wenry-website.vercel.app/images/favicon.jpg"
+      content="https://gustavo-wenry-website.vercel.app/images/favicon.png"
     />
     <meta
       property="og:url"
